Fix issue with wave image on ios, updated pwa icons, fix buttons to install pwa app, added hint video for ios pwa

--- a/src/material.scss
+++ b/src/material.scss
@@ -3,6 +3,9 @@
 
 :root {
     --mat-expansion-header-collapsed-state-height: 3rem;
+    .mat-mdc-dialog-content {
+        max-height: 100vh;
+    }
 }
 
 @include mat.dialog-overrides((
